--- a/cdb/app/views/scene_descriptions/_form.rhtml
+++ b/cdb/app/views/scene_descriptions/_form.rhtml
@@ -6,5 +6,8 @@
 
 <p><label for="scene_description_text">Text</label><br/>
 <%= text_area 'scene_description', 'text'  %></p>
+
+<p><label for="scene_description_comment">Comment</label><br/>
+<%= text_area 'scene_description', 'comment'  %></p>
 <!--[eoform:scene_description]-->
 
