--- a/cdb/app/views/character/show.rhtml
+++ b/cdb/app/views/character/show.rhtml
@@ -22,6 +22,7 @@
 <b>Erstellungsdatum:</b> <%= @c.create_on.strftime("%d/%m/%y") %><br>
 <b>XP:</b> <%= @c.xp %><br>
 <b>Kampf-XP:</b> <%= @c.xp_combat %><br>
+<b>Auto-XP:</b> <%= link_to @c.xp_time, :controller => 'stat', :action => 'time_xp', :id => @c.id %><br>
 <b>Gold:</b> <%= @c.gold %><br>
 <p>
 <b>Klasse(n)</b><br>
