--- a/cdb/public/stylesheets/main.css
+++ b/cdb/public/stylesheets/main.css
@@ -1,5 +1,5 @@
 body,td {
-	font-family: Verdana, Arial, helvetica, sans-serif;
+	font-family: Bitstream Vera Sans, Verdana, Arial, Helvetica, sans-serif;
 	font-size: 12px;
 }
 
@@ -31,7 +31,7 @@ td.center { text-align:center; }
 td.content { text-align: center; vertical-align: center; width: 100%; height: 100%; }
 
 input,select,textarea {
-	font-family: verdana; font-size: 10px; border: 1px dotted black;
+	font-family: Bitstream Vera Sans, Verdana; font-size: 10px; border: 1px dotted black;
 	background-color: #ffffff; color: #770000;
 }
 td.char_anmeldung {
@@ -82,4 +82,30 @@ td.craft_prod_inactive {
 
 #resref, #ts, #audit {
 	font-size: 85%;
+}
+
+
+table.timexp {
+		font-family: monospace;
+		border: 1px solid black;
+}
+
+th.timexp {
+
+}
+
+th.timexp_col {
+}
+
+td.timexp_name {
+		border: 0px;
+		font-family: monospace;
+}
+td.timexp_time {
+		border: 0px;
+		font-family: monospace;
+}
+td.timexp_xp {
+		border: 0px;
+		font-family: monospace;
 }
