--- a/cdb/app/views/audit/index.rhtml
+++ b/cdb/app/views/audit/index.rhtml
@@ -3,7 +3,7 @@
 <%= pagination_links @audit_pages, :window_size => 50 %>
 <table width="100%">
 <% for a in @audit do %>
-<%= render :partial => "audit_event", :locals => {:a => a}%>
+<%= render :partial => "audit_event", :locals => {:a => a, :complete => true}%>
 <% end %>
 </table>
 <%= pagination_links @audit_pages, :window_size => 50 %>
