--- a/cdb/public/stylesheets/main.css
+++ b/cdb/public/stylesheets/main.css
@@ -1,26 +1,26 @@
 body,td {
-	font-family: Bitstream Vera Sans, Verdana, Arial, Helvetica, sans-serif;
-	font-size: 12px;
+  font-family: Bitstream Vera Sans, Verdana, Arial, Helvetica, sans-serif;
+  font-size: 12px;
 }
 
 a#online { color: #00cc00; font-style: italic; }
 a#dm { color: #00cccc; font-weight: bold; }
 
 a:visited {
-	color: #550000;
+  color: #550000;
 }
 
 a:link {
-	color: #770000;
+  color: #770000;
 }
 a:hover {
-	color #99cc00;
+  color #99cc00;
 }
 
 table.main { width:100% }
 td {
-	border: 1px solid black;
-	empty-cells: hide;
+  border: 1px solid black;
+  empty-cells: hide;
 }
 td.head { font-weight: bold; text-align:center; }
 
@@ -31,63 +31,63 @@ td.center { text-align:center; }
 td.content { text-align: center; vertical-align: center; width: 100%; height: 100%; }
 
 input,select,textarea {
-	font-family: Bitstream Vera Sans, Verdana; font-size: 10px; border: 1px dotted black;
-	background-color: #ffffff; color: #770000;
+  font-family: Bitstream Vera Sans, Verdana; font-size: 10px; border: 1px dotted black;
+  background-color: #ffffff; color: #770000;
 }
 td.char_anmeldung {
-	padding-left: 1em;
-	padding-right: 1em;
-	text-align: left;
-	vertical-align: top;
+  padding-left: 1em;
+  padding-right: 1em;
+  text-align: left;
+  vertical-align: top;
 }
 
 td.comment_charname {
-	background-color: #ccc;
-	color: #000;
-	text-align: left;
+  background-color: #ccc;
+  color: #000;
+  text-align: left;
 }
 
 td.publiccomment {
-	background-color: #fff;
-	text-align: center;
+  background-color: #fff;
+  text-align: center;
 }
 td.privatecomment {
-	background-color: #dff;
-	text-align: center;
+  background-color: #dff;
+  text-align: center;
 }
 td.systemcomment {
-	background-color: #8bf;
-	color: #000;
-	text-align: center;
+  background-color: #8bf;
+  color: #000;
+  text-align: center;
 }
 
 
 td.craft_prod_active {
 }
 td.craft_prod_inactive {
-	background-color: #ccc;
+  background-color: #ccc;
 }
 
 #craft_prod_script {
-	color: #00a;
+  color: #00a;
 }
 #craft_prod_mag {
-	color: #a00;
+  color: #a00;
 }
 #craft_comment {
-	font-style: italic;
-	text-align: left;
-	padding-left: 0.5em;
+  font-style: italic;
+  text-align: left;
+  padding-left: 0.5em;
 }
 
 #resref, #ts, #audit {
-	font-size: 85%;
+  font-size: 85%;
 }
 
 
 table.timexp {
-		font-family: monospace;
-		border: 1px solid black;
+    font-family: monospace;
+    border: 1px solid black;
 }
 
 th.timexp {
@@ -98,14 +98,25 @@ th.timexp_col {
 }
 
 td.timexp_name {
-		border: 0px;
-		font-family: monospace;
+    border: 0px;
+    font-family: monospace;
 }
 td.timexp_time {
-		border: 0px;
-		font-family: monospace;
+    border: 0px;
+    font-family: monospace;
 }
 td.timexp_xp {
-		border: 0px;
-		font-family: monospace;
+    border: 0px;
+    font-family: monospace;
+}
+
+
+td.set_value,
+td.set_type,
+td.set_key {
+  width: 300px;
+    font-family: monospace;
+}
+td.set_type {
+  width: 50px;
 }
