--- a/cdb/app/views/character/index.rhtml
+++ b/cdb/app/views/character/index.rhtml
@@ -4,24 +4,24 @@
 # "Query: " + @query.inspect + "<br><br>"
 %>
 
-<%= form_tag({:onlineonly => @onlineonly, :sort => @sort, :order => @order, :search => @search}, {:method => 'post'}) if session[:user].char_admin? %>
+<%= form_tag({:onlineonly => @onlineonly, :sort => @sort, :order => @order, :search => @search}, {:method => 'post'}) if amask(Account::IS_CHARACTER_ADMIN) %>
 <%= @characters.size %> Char(s) angezeigt, <%= @character_pages.item_count %> Char(s) passen den Kriterien, <%= total = Character.count %> Char(s) in DB.<br>
 Durchschnitts-Level in den letzten 30 Tagen (nur der DB bekannte Chars) <%= "<a id='online'>Nur online!</a>" if @onlineonly == "1" %>: <%= @average_level %><br>
 Chars, die nicht bespielt wurden ("hakless"): <%= hakless = Character.count("xp = 6000") %> (<%= "%.2f" % [100 / (total.to_f / hakless)]%>%)<br>
 
 <%= pagination_links(@character_pages, :window_size => 50, :params => {'search' => @search, 'sort' => @sort, 'order' => @order}) %>
-<%= render :partial => "charlisthdr", :locals => {:showsort => true, :form => session[:user].char_admin? } %>
+<%= render :partial => "charlisthdr", :locals => {:showsort => true, :form => amask(Account::IS_CHARACTER_ADMIN) } %>
 <% @characters.each do |c| %>
-<% next if c.race == "Bleistift" && !session[:user].char_view? %>
-<%= render :partial => "charlistitem", :locals => { :c => c, :form => session[:user].char_admin? } %>
+<% next if c.race == "Bleistift" && !amask(Account::SEE_ALL_CHARACTERS) %>
+<%= render :partial => "charlistitem", :locals => { :c => c, :form => amask(Account::IS_CHARACTER_ADMIN) } %>
 <% end %>
-<%= render :partial => "charlistftr", :locals => {:showsort => true, :form => session[:user].char_admin? } %>
+<%= render :partial => "charlistftr", :locals => {:showsort => true, :form => amask(Account::IS_CHARACTER_ADMIN) } %>
 <%= pagination_links(@character_pages, :window_size => 50, :params => {'search' => @search, 'sort' => @sort, 'order' => @order}) %>
 
-<%= end_form_tag if session[:user].char_admin? %>
+<%= end_form_tag if amask(Account::IS_CHARACTER_ADMIN) %>
 </p>
 
-<% if session[:user] && session[:user].char_admin? %>
+<% if session[:user] && amask(Account::IS_CHARACTER_ADMIN) %>
 <p>
 <h3>Latest comments</h3>
 <table>
@@ -29,9 +29,9 @@ Chars, die nicht bespielt wurden ("hakless"): <%= hakless = Character.count("xp 
 first = nil
 for c in @latest_comments do
 %><%=
-	render :partial => "comment", :locals => {:c =>c, :show_char_header => (c.character != first)}
+  render :partial => "comment", :locals => {:c =>c, :show_char_header => (c.character != first)}
 %><%
-	first = c.character
+  first = c.character
 end
 %>
 </table>
