--- a/cdb/app/views/layouts/main.rhtml
+++ b/cdb/app/views/layouts/main.rhtml
@@ -8,40 +8,36 @@
 <body>
 <table class="main" style="width:100%">
 <tr><td class="menue">
-<%= session[:user].nil? ? "Nicht eingelogged, " + link_to("Einloggen", :controller => 'account', :action => 'login') : "Eingelogged als " + session[:user].account + ", " + link_to( "Ausloggen", :controller => 'account', :action => 'logout') %> * <b>Rechte dieses Accounts:</b> Benutzer <%= "Charakter-Administrator" if session[:user] && session[:user].char_admin? %> <%= "Charakter-Benutzer" if session[:user] && session[:user].char_view? %> <%= "Audit-Admin" if session[:user] && session[:user].audit_admin? %> <%= "Mod-Admin" if session[:user] && session[:user].mod_admin? %><br>
+<%= session[:user].nil? ? "Nicht eingelogged, " + link_to("Einloggen", :controller => 'account', :action => 'login') : "Eingelogged als " + session[:user].account + ", " + link_to( "Ausloggen", :controller => 'account', :action => 'logout') %>
+<br>
 
 <%= link_to_if (session[:user]), "Account-Details", :controller => "account", :action => "details" %>&nbsp;
 * <%= link_to_if (session[:user] && session[:user].details?), "<b>Char-Liste</b>", :controller => "character", :action => "index" %>&nbsp;
 <!-- * <%= link_to_if (session[:user] && session[:user].details?), "Statistiken", :controller => 'stat', :action => 'index' %>&nbsp; -->
 * <%= link_to_if (session[:user] && session[:user].details? && false), "Schach-Liga", :controller => 'schach', :action => 'index' %><br>
 
-<% if session[:user] && session[:user].char_admin? %>
-<%= link_to_if (session[:user] && session[:user].details? && session[:user].char_admin?), "Weather", :controller => 'weather', :action => 'index' %>&nbsp;
-* <%= link_to_if (session[:user] && session[:user].details? && session[:user].char_admin?), "MentorData", :controller => 'stat', :action => 'mentor' %>&nbsp;
-* <%= link_to_if (session[:user] && session[:user].details? && session[:user].char_admin?), "TimeXP", :controller => 'stat', :action => 'time_xp' %>&nbsp;
-* <%= link_to_if (session[:user] && session[:user].details? && session[:user].audit_admin?), "Settings", :controller => 'set', :action => 'index' %>
+<%= link_to_if amask(Account::AMASK_CAN_CHANGE_WEATHER), "Weather", :controller => 'weather', :action => 'index' %>&nbsp;
+* <%= link_to_if amask(Account::AMASK_CAN_SEE_ALL_MENTORS), "MentorData", :controller => 'stat', :action => 'mentor' %>&nbsp;
+* <%= link_to_if amask(Account::AMASK_CAN_SEE_ALL_CHARACTERS), "TimeXP", :controller => 'stat', :action => 'time_xp' %>&nbsp;
+* <%= link_to_if amask(Account::CAN_SEE_GV), "Settings", :controller => 'set', :action => 'index' %>
 <br>
-<% end %>
 
-<% if session[:user] && session[:user].object_admin? %>
-ObjectAdmin: <%= link_to_if (session[:user] && session[:user].details? && session[:user].object_admin?), "PersistentObject", :controller => 'persistent_objects', :action => 'index' %>&nbsp;
-* <%= link_to_if (session[:user] && session[:user].details? && session[:user].object_admin?), "SceneDescriptions", :controller => 'scene_descriptions', :action => 'index' %>&nbsp;
+ObjectAdmin:
+<%= link_to_if amask(Account::CAN_SET_PERSISTENCY), "PersistentObject", :controller => 'persistent_objects', :action => 'index' %>&nbsp;
+* <%= link_to_if amask(Account::CAN_SET_PERSISTENCY), "SceneDescriptions", :controller => 'scene_descriptions', :action => 'index' %>&nbsp;
 <br>
-<% end %>
 
-<% if session[:user] && session[:user].audit_admin? %>
-Audit: <%= link_to_if (session[:user] && session[:user].details? && session[:user].audit_admin?), "Chatlogs", :controller => 'chatlog', :action => 'index' %>&nbsp;
-* <%= link_to_if (session[:user] && session[:user].details? && session[:user].audit_admin?), "Audit", :controller => "audit", :action => 'index' %>&nbsp;
-* <%= link_to_if (session[:user] && session[:user].details? && session[:user].audit_admin?), "Container", :controller => "container", :action => 'index' %>&nbsp;
-* <%= link_to_if (session[:user] && session[:user].details? && session[:user].audit_admin?), "DB Consistency Check", :controller => 'character', :action => 'consistency' %>
+Audit:
+<%= link_to_if amask(Account::CAN_SEE_CHATLOGS), "Chatlogs", :controller => 'chatlog', :action => 'index' %>&nbsp;
+* <%= link_to_if amask(Account::CAN_SEE_AUDIT_TRAILS), "Audit", :controller => "audit", :action => 'index' %>&nbsp;
 <br>
-<% end %>
-<% if session[:user] && session[:user].craft_view? %>
-Craft: <%= link_to_if (session[:user] && session[:user].details? && session[:user].craft_view?), "Crafting-DB", :controller => 'craft', :action => 'index' %>&nbsp;
-* <%= link_to_if (session[:user] && session[:user].details? && session[:user].craft_admin?), "Merchants", :controller => 'merchant', :action => 'index' %>&nbsp;
-* <%= link_to_if (session[:user] && session[:user].details? && session[:user].craft_view?), "SpellCalc", :controller => 'craft', :action => 'spell' %>&nbsp;
-* <%= link_to_if (session[:user] && session[:user].details? && session[:user].craft_view?), "EnchantCalc", :controller => 'craft', :action => 'enchant' %>&nbsp;
-<% end %>
+
+Craft:
+<%= link_to_if amask(Account::CAN_SEE_CRAFTING), "Crafting-DB", :controller => 'craft', :action => 'index' %>&nbsp;
+* <%= link_to_if amask(Account::CAN_SEE_MERCHANTS), "Merchants", :controller => 'merchant', :action => 'index' %>&nbsp;
+* <%= link_to_if amask(Account::CAN_SEE_CRAFTING), "SpellCalc", :controller => 'craft', :action => 'spell' %>&nbsp;
+* <%= link_to_if false, "EnchantCalc", :controller => 'craft', :action => 'enchant' %>&nbsp;
+
 <br>
 <% if flash[:notice] %>
   <% if !flash[:error] %>
@@ -56,7 +52,7 @@ Craft: <%= link_to_if (session[:user] && session[:user].details? && session[:use
 </td>
 
 <td width="250px" align="center" valign="middle" style="empty-cells: show; vertical-align: middle;">
-<% if session[:user] && session[:user].char_view? %>
+<% if amask(Account::SEE_ALL_CHARACTERS) %>
 <%= link_to "all", {:controller => 'character', :action => 'index', } %>
 <%= link_to "<i>online</i>", {:controller => 'character', :action => 'index', :onlineonly => 1} %>
 <%= link_to "<b>register</b>", {:controller => 'character', :action => 'index', :search => 'register'} %>
@@ -81,7 +77,7 @@ Craft: <%= link_to_if (session[:user] && session[:user].details? && session[:use
 </td></tr>
 </table>
 <% 
-  if session[:user] && session[:user].audit_admin?
+  if amask(Account::CAN_SEE_AUDIT_TRAILS)
 %>
 <hr>
 <%= debug(params) %>
