--- a/cdb/app/views/layouts/main.rhtml
+++ b/cdb/app/views/layouts/main.rhtml
@@ -20,6 +20,7 @@
 * <%= link_to_if amask(Account::AMASK_CAN_SEE_ALL_MENTORS), "MentorData", :controller => 'stat', :action => 'mentor' %>&nbsp;
 * <%= link_to_if amask(Account::AMASK_CAN_SEE_ALL_CHARACTERS), "TimeXP", :controller => 'stat', :action => 'time_xp' %>&nbsp;
 * <%= link_to_if amask(Account::CAN_SEE_GV), "Settings", :controller => 'set', :action => 'index' %>
+* <%= link_to_if amask(Account::SEE_ALL_CHARACTERS), "LPH Toplist", :controller => 'stat', :action => 'lph_toplist' %>
 <br>
 
 ObjectAdmin:
