r124: new amask flag stuff

--- a/cdb/app/views/character/index.rhtml
+++ b/cdb/app/views/character/index.rhtml
@@ -21,7 +21,7 @@ Chars, die nicht bespielt wurden ("hakless"): <%= hakless = Character.count("xp 
 <%= end_form_tag if amask(Account::IS_CHARACTER_ADMIN) %>
 </p>
 
-<% if session[:user] && amask(Account::IS_CHARACTER_ADMIN) %>
+<% if amask(Account::IS_CHARACTER_ADMIN) %>
 <p>
 <h3>Latest comments</h3>
 <table>
