--- a/cdb/app/views/account/amask.rhtml
+++ b/cdb/app/views/account/amask.rhtml
@@ -1,16 +1,24 @@
+<h2>Privileges</h2>
 <% if !@account %>
 	Not exist or no access, nit.
 <% else %>
-<form method="post">
-<center>
-<div align="center" style="border: 1px solid black; width: 250px; text-align: left; padding: 2px; margin: 2px;">
-<% Account::AMASK.sort {|a,b| a[1] <=> b[1] }.each {|k,v| %>
-<input type="checkbox" name="<%= k %>" value="<%= 1 %>" <%= @account.amask.to_i & v.to_i > 0 ? "checked" : "" %>>
-<%= k %>
-<br>
-<% } %>
+	<form method="post">
+	<center>
+	<div align="center" style="border: 1px solid black; width: 250px; text-align: left; padding: 2px; margin: 2px;">
+	<% Account::amask_a.each {|k| %>
+		<input type="checkbox" name="mask[<%= k %>]" value="<%= 1 %>" <%= @account['amask'].to_i & Account::AMASK[k] > 0 ? "checked" : "" %>>
+		<%= k %>
+		<br>
+	<% } %>
 </div>
 <input type="submit">
 </center>
 </form>
+<br>
+<h2>Privileged Users</h2>
+<tt>
+<% @pusers.each {|u| %>
+<%= "%s: %d" % [link_to_account(u), u.amask] %><br>
+<% } %>
+</tt>
 <% end %>
