--- a/cdb/app/views/account/login.rhtml
+++ b/cdb/app/views/account/login.rhtml
@@ -1,4 +1,4 @@
-<% if session[:user].nil? %>
+<% if !get_user %>
 <%= form_tag  %>
 <%= text_field "login", "account" %><br>
 <%= password_field "login", "password" %><br>
